test/good/obj00.inc.c

jwr_obj();
jwr_close();
