test/bad/noseq02.inc.c
jwr_obj();
jwr_key("first");
jwr_int(0);
jwr_key("second");
jwr_int(0);
jwr_close();

jwr_int(0);
